fix(*): overflow-x hidden messing with pageYOffset

--- a/client/assets/style/global.scss
+++ b/client/assets/style/global.scss
@@ -16,10 +16,6 @@ body {
     scrollbar-width: none;  // hide scrollbar for Firefox
 }
 
-#__nuxt {
-    overflow-x: hidden;
-}
-
 #app {
     font-family: Roboto;
     -webkit-font-smoothing: antialiased;
@@ -28,6 +24,8 @@ body {
     color: #2c3e50;
     width: 100vw;
     height: 100vh;
+
+    & > * { overflow-x: hidden; }
 }
 
 .title {
